# catalan_words_frequency_estimator

./: .gitignore  README.md  count_words.py  pyproject.toml
